- Valley.getElevationLeftOfHeadwall does lookup and interpolation

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- remove unused images


DONE:
9/9/09 - add immutable support for units to tools (glacial budget meter, ice thickness tool, gps)
9/9/09 - bugfix: glacial budget meter should use meter/yr for all values
9/9/08 - convert existing data in time-based charts when switching units
9/9/08 - switch charts between English & metric units, any existing charts are closed and time-based data is lost
9/9/08 - change string keys for chart axes to accommodate switching between English and metric
9/9/08 - completed: switch coordinates view between English & metric units
9/9/08 - add CoordinatesNode, parent node for distance and elevation axes
9/9/08 - rewrite ElevationAxisNode to handle English/metric switching
9/9/08 - hook up English/metric radio buttons to coordinate axes
9/9/08 - rewrite DistanceAxisNode to handle English/metric switching
9/9/08 - bugfix: fix loop start point in Valley elevation interpolation
9/9/08 - quick-&-dirty handling of meters-to-feet in DistanceAxisNode, tick spacing is not adjusted
9/9/08 - move all units conversions to UnitsConverter
9/9/08 - add englishUnits arg to constructors for coordinates feature
9/9/08 - simplify i18n for units, to accommodate switching between English and metric
******* 1.00.02 (24258)
9/8/08 - bugfix: snowfall gradient doesn't draw properly and crashes on Mac OS 10.4 (see Unfuddle #553)
9/8/08 - update snowfall shape based on bounds of both birds-eye and zoomed viewports, so that sky doesn't above snow in zoomed view on large monitors
9/8/08 - simplify shape of snowfall, don't use constructive area geometry
9/4/08 - implement Save/Load feature